# ExternalMc

./: .gitignore  CMakeLists.txt  build_mappings.py  extract_yarn.py  migrate_mappings.py  search_yarn.py  yarn_results.txt
.github/workflows/: build.yml
Compiled Version/: settings.xml
Used Prompt/: master_prompt.md.resolved
src/: dllmain.cpp  pch.h
src/config/: mappings.h  mappings_fabric.h
src/core/: hooks.cpp  hooks.h  jvm_wrapper.cpp  jvm_wrapper.h
src/jni_headers/: jni.h  jvmti_min.h
src/modules/: aimassist.cpp  aimassist.h  esp.cpp  esp.h  fly.cpp  fly.h  jesus.cpp  jesus.h  module.h  module_manager.cpp  module_manager.h  nofall.cpp  nofall.h  reach.cpp  reach.h  xray.cpp  xray.h
src/render/: esp_renderer.cpp  esp_renderer.h  menu.cpp  menu.h  renderer.cpp  renderer.h
src/sdk/: entity.cpp  entity.h  java_object.h  minecraft.cpp  minecraft.h  world.cpp  world.h
